--- a/socialEyem-web/src/main/webapp/resources/plantilla.xhtml
+++ b/socialEyem-web/src/main/webapp/resources/plantilla.xhtml
@@ -17,9 +17,6 @@
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700"/>
         <!-- Custom styles -->
         <h:outputStylesheet library="css" name="styles.css"/>
-        
-        
-
 
     </h:head>
     <h:body>
@@ -51,7 +48,7 @@
                     <!--Nav-->
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="timeline.xhtml">Timeline</a></li>
+                            <li><a href="timeline.xhtml">Timeline</a></li>
                             <li><a href="mieyem.xhtml">miEYEM</a></li>
                             <li><a href="misgrupos.xhtml">mis grupos</a></li>
                         </ul>
