--- a/socialEyem-web/src/main/webapp/index.html
+++ b/socialEyem-web/src/main/webapp/index.html
@@ -66,7 +66,7 @@
                     "\nNombre: " + resp.displayName + "\n\n" +
                     JSON.stringify(resp);
 
-            //window.location.replace("timeline.xhtml");
+            window.location.replace("timeline.xhtml");
         }
 
     </script>
