--- a/socialEyem-web/src/main/webapp/index.html
+++ b/socialEyem-web/src/main/webapp/index.html
@@ -4,12 +4,30 @@
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script src="https://apis.google.com/js/client:platform.js" async defer></script>
+        <style type="text/css">
+            body {
+                background: #f4f4f4 url(http://www.suescunpapel.com/content/2967/00938.jpg) top center;
+                background-size: cover;
+                color: #7C7C7C;
+                padding: 30px 0 35px 0;}
+            h1
+            {
+                letter-spacing: 1px;
+                font-family: Alice, Georgia, serif;
+                text-decoration: none;
+                text-transform: uppercase;
+                font-size: 4em;
+                font-weight: 900;
+                color: #FFF;
+                text-shadow: -1px 0 black, 0 1px black, 2px 0 black, 0 -1px black;
+            }
+        </style>
     </head>
     <body>
 
 
     <center>
-        
+
         <div id="contenidologin" style=" margin:0 auto;">
             <h1>social eyem</h1>
             <span id="signinButton">
@@ -66,7 +84,7 @@
                     "\nNombre: " + resp.displayName + "\n\n" +
                     JSON.stringify(resp);
 
-            window.location.replace("timeline.xhtml");
+            //window.location.replace("timeline.xhtml");
         }
 
     </script>
