--- a/socialEyem-web/src/main/webapp/timeline.xhtml
+++ b/socialEyem-web/src/main/webapp/timeline.xhtml
@@ -33,7 +33,7 @@
                         <ui:repeat value="#{usuarioBean.listaUsuario}" var="item">
                             <h:form>
                                 #{item.email}<br/>
-                                #{item.nombre}<br/>
+                                #{item.name}<br/>
                                 #{item.imagen}<br/>
                                 #{item.numGrupos}<br/>
                                 <hr/>
