--- a/socialEyem-web/src/main/webapp/timeline.xhtml
+++ b/socialEyem-web/src/main/webapp/timeline.xhtml
@@ -33,13 +33,14 @@
                         <ui:repeat value="#{usuarioBean.listaUsuario}" var="item">
                             <h:form>
                                 #{item.email}<br/>
-                                #{item.name}<br/>
+                                #{item.nombre}<br/>
                                 #{item.imagen}<br/>
                                 #{item.numGrupos}<br/>
                                 <hr/>
                             </h:form>
                         </ui:repeat>
-                        <hr/>
+
+                        
 
                         <br/><br/>
                         <!--post-->
