google mejorado. rapido eh?

--- a/socialEyem-web/src/main/webapp/index.xhtml
+++ b/socialEyem-web/src/main/webapp/index.xhtml
@@ -48,7 +48,7 @@
                         <input type="text" id="poiemail" name="poiemail" />
                         <input type="text" id="poinombre" name="poinombre"/>
                         <input type="text" id="poiimagen" name="poiimagen"/><br/>
-                        <h:commandButton action="#{usuarioBean.actualizarDatosSession()}" value="Entrar a EYEM"/>
+                        <h:commandButton action="#{usuarioBean.actualizarDatosSession()}" id="miBotonaso" value="Entrar a EYEM"/>
                     </h:form>
                 
                 <!-- Container with the Sign-In button. -->
