Grupos arreglado para que la precarga si no existen grupos no tenga errores

--- a/socialEyem-web/src/main/webapp/misgrupos.xhtml
+++ b/socialEyem-web/src/main/webapp/misgrupos.xhtml
@@ -26,7 +26,7 @@
                                 <p:column style="width:32px;text-align: center">
                                 </p:column>
                             </p:dataTable>
-                            <h:button  outcome="crearGrupo.xhtml" class="btn btn-action" value="Crear Grupo"></h:button>
+                            <h:button  outcome="crearGrupo.xhtml" class="btn-action" value="Crear Grupo"></h:button>
                         </div><br/><br/> 
                     </div> 
                 </div>
