Algunos arreglos en los grupos

--- a/socialEyem-web/src/main/webapp/crearGrupo.xhtml
+++ b/socialEyem-web/src/main/webapp/crearGrupo.xhtml
@@ -25,10 +25,10 @@
                                     </f:facet>
                                     <p:column selectionMode="multiple" style="width:16px;text-align:center"/>
                                     <p:column headerText="Nombre">
-                                        <h:outputText value="#{usuario.email}" />
+                                        <h:outputText value="#{usuario.email}"/>
                                     </p:column>
                                 </p:dataTable>
-                                <h:commandButton action="#{grupoBean.crearGrupo}" class="btn btn-action" value="Crear"></h:commandButton>
+                                <h:commandButton action="#{grupoBean.crearGrupo}" class="btn-action" value="Crear"></h:commandButton>
                             </h:form>
                         </div><br/><br/> 
                     </div> 
