--- a/socialEyem-web/src/main/webapp/misgrupos.xhtml
+++ b/socialEyem-web/src/main/webapp/misgrupos.xhtml
@@ -15,18 +15,21 @@
                     <div class="col-sm-8 col-sm-offset-2">
 
                         <h1>MIS GRUPOS</h1>
-                        <div align="right">
-                            <p:dataTable var="grupo" value="#{grupoBean.listaGrupo}">
-                                <f:facet name="header">
-                                    Grupos a los que pertenezco
-                                </f:facet>
-                                <p:column headerText="Nombre">
-                                    <h:outputText value="#{grupo.nombreGrupo}" />
-                                </p:column>
-                                <p:column style="width:32px;text-align: center">
-                                </p:column>
-                            </p:dataTable>
-                            <h:button  outcome="crearGrupo.xhtml" class="btn-action" value="Crear Grupo"></h:button>
+                        <div align="center">
+                            <h:form>
+                                <h:dataTable id="table1" value="#{grupoBean.listaGrupo}" var="grupo"
+                                             border="1">
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="Grupos a los que perteneces" />
+                                        </f:facet>
+                                        <h:link outcome="mostrarGrupo" value="#{grupo.nombreGrupo}">
+                                            <f:param name="id" value="#{grupo.idGrupo}" />
+                                        </h:link>
+                                    </h:column>
+                                </h:dataTable>
+                                <h:button  outcome="crearGrupo.xhtml" class="btn-action" value="Crear Grupo"></h:button>
+                            </h:form>
                         </div><br/><br/> 
                     </div> 
                 </div>
