--- a/socialEyem-web/src/main/webapp/mostrarGrupo.xhtml
+++ b/socialEyem-web/src/main/webapp/mostrarGrupo.xhtml
@@ -9,6 +9,7 @@
     <h:head>
         <f:metadata>
             <f:viewParam name="id" />
+            <f:viewParam name="creandoPost" />
         </f:metadata>
     </h:head>
 
@@ -20,9 +21,26 @@
                     <div class="col-sm-8 col-sm-offset-2">
 
                         <h1>GRUPO #{grupoBean.grupoSeleccionado.nombreGrupo}</h1>
-                        <div align="right">
+                        <h:panelGroup id="cont" layout="block">
+                            <h:form id="form_crear">
+                                <div class="form-group">
+                                    Contenido
+                                    <h:inputTextarea class="form-control" rows="4" value="#{grupoBean.contenido}"/>
+                                </div>
+                                <div class="form-group">
+                                    url multimedia
+                                    <h:inputTextarea rows="1" class="form-control" value="#{grupoBean.imagen}" />
+                                </div>
 
-                        </div><br/><br/> 
+                                <div align="right">  
+                                    <h:commandButton class="btn-action" type="submit" value="eyem it">
+                                        <f:param name="creandoPost" value="#{grupoBean.grupoSeleccionado.idGrupo}" />
+                                        <f:ajax execute="@form" render="cont" listener="#{grupoBean.crearPostGrupo()}"/>
+                                    </h:commandButton>
+                                </div>
+                            </h:form>
+                            <hr/>
+                        </h:panelGroup>
                     </div> 
                 </div>
             </div>
