--- a/socialEyem-web/src/main/webapp/verPerfil.xhtml
+++ b/socialEyem-web/src/main/webapp/verPerfil.xhtml
@@ -38,7 +38,10 @@
                                     </h:panelGroup>
 
                                     <!--Contenido del post-->
-                                    <p>#{p.contenido}</p> <br/>
+                                    <p>#{p.contenido}</p> 
+                                    
+                                    <hr/>
+                                    
 
                                 </article>
                             </ui:repeat>
