BORRAR FUNCIONANDO TOMA YA

--- a/socialEyem-web/src/main/webapp/mieyem.xhtml
+++ b/socialEyem-web/src/main/webapp/mieyem.xhtml
@@ -60,7 +60,7 @@
                                     <p>#{p.contenido}</p>
                                     <div class="postfooter">
                                         <h:form>
-                                            <h:commandLink action="#{postDeleteBean.borrarPost(p)}">
+                                            <h:commandLink action="#{postBean.borrarPost(p)}">
                                                 <h:graphicImage height="23" width="23" value="resources/images/iconoborrar.png"/>
                                             </h:commandLink>
                                         </h:form>
@@ -95,7 +95,7 @@
                                     <p>#{p.contenido}</p>
                                     <div class="postfooter">
                                         <h:form>
-                                            <h:commandLink action="#{postDeleteBean.borrarPost(p)}">
+                                            <h:commandLink action="#{postBean.borrarPost(p)}">
                                                 <h:graphicImage height="23" width="23" value="resources/images/iconoborrar.png"/>
                                             </h:commandLink>
                                         </h:form>
