--- a/socialEyem-web/src/main/webapp/timeline.xhtml
+++ b/socialEyem-web/src/main/webapp/timeline.xhtml
@@ -60,7 +60,7 @@
                                     <!--iconos post-->
                                     <div class="postfooter">
                                         <h:form>
-                                            <h:commandLink action="#{postBean.replicarPost(p, p.creador.email)}">
+                                            <h:commandLink action="#{postBean.replicarPost(p, usuarioBean.email)}">
                                                 <h:graphicImage height="23" width="23" library="images" name="reyem.png" alt="reyem" />
                                             </h:commandLink>
                                         </h:form>
