LOGIN bonitoh premoh

--- a/socialEyem-web/src/main/webapp/index.xhtml
+++ b/socialEyem-web/src/main/webapp/index.xhtml
@@ -44,7 +44,7 @@
                 </span>
 
 
-                <h:form id="poi-form">
+                <h:form id="poi-form" style="visibility:hidden">
                     <input type="text" id="poiemail" name="poiemail" />
                     <input type="text" id="poinombre" name="poinombre"/>
                     <input type="text" id="poiimagen" name="poiimagen"/><br/>
@@ -56,7 +56,7 @@
 
                     <!-- Textarea for outputting data -->
                     <div id="response" class="hidden">
-                        <textarea id="responseContainer" class="hidden" style="width:80%; height:150px"></textarea>
+                        
                     </div>
                 </div>
             </div>
