re-eyem finalizazdo

--- a/socialEyem-web/src/main/webapp/timeline.xhtml
+++ b/socialEyem-web/src/main/webapp/timeline.xhtml
@@ -65,7 +65,8 @@
                                     #{p.contenido}
                                     <!--iconos post-->
                                     <div class="postfooter">
-                                        <h:panelGroup rendered="#{!postBean.reyemAnterior(p.idPost, usuarioBean.email)}">
+                                        <h:panelGroup rendered="#{!postBean.reyemAnterior(p.idPost, usuarioBean.email) 
+                                                                  and p.creador.email ne usuarioBean.email}">
                                             <h:form>
                                                 <h:commandLink action="#{postBean.replicarPost(p, usuarioBean.email)}">
                                                     <h:graphicImage height="23" width="23" library="images" name="reyem.png" alt="reyem" />
