empezando con arzezibility

--- a/socialEyem-web/src/main/webapp/index.xhtml
+++ b/socialEyem-web/src/main/webapp/index.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Start Page</title>
+        <title>Inicie sesión</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <script src="https://apis.google.com/js/client:platform.js" async="async" defer="defer"></script>
         <style type="text/css">
@@ -34,6 +34,7 @@
             <div id="contenidologin" style=" margin:0 auto;">
                 <h1>social eyem</h1>
                 <span id="signinButton">
+                    
                     <button class="g-signin"
                             data-scope="email"
                             data-clientid="1004446024731-a4bo8mvhguacp0r41gq7gpee44fqmvk1.apps.googleusercontent.com"
@@ -43,7 +44,7 @@
                     </button>
                 </span>
 
-
+                
                 <h:form id="poi-form" style="visibility:hidden">
                     <input type="text" id="poiemail" name="poiemail" />
                     <input type="text" id="poinombre" name="poinombre"/>
