--- a/socialEyem-web/src/main/webapp/resources/plantilla.xhtml
+++ b/socialEyem-web/src/main/webapp/resources/plantilla.xhtml
@@ -2,8 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <meta charset="utf-8"/>
         <meta name="viewport"    content="width=device-width, initial-scale=1.0"/>
@@ -38,33 +37,34 @@
             <div id="head" class="parallax" parallax-speed="1">
                 <h1 id="logo" class="text-center">
                     <!--Imagen del usuario logeado-->
-                    <img class="img-circle" src="#{usuarioBean.imagen}" alt="Mi imagen de perfil"/>
+                    <h:graphicImage class="img-circle" value="#{usuarioBean.imagen}" alt="Mi imagen de perfil"/>
                     <span class="title">#{usuarioBean.nombre}</span>
                     <span class="taglineEMAIL">#{usuarioBean.email}</span>
                 </h1>
             </div>
 
+            
             <nav class="navbar navbar-default navbar-sticky">
                 <div class="container-fluid">
 
-                    <!--Nav responsive-->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> 
-                            <span class="sr-only">Toggle navigation</span> 
+                            <span class="sr-only">Abrir navegación</span>
                             <span class="icon-bar"></span> 
                             <span class="icon-bar"></span> 
                             <span class="icon-bar"></span> 
                         </button>
                     </div>
 
-                    <!--Nav-->
                     <div class="navbar-collapse collapse">
+
                         <ul class="nav navbar-nav">
                             <li><a href="timeline.xhtml">Timeline</a></li>
                             <li><a href="mieyem.xhtml">mi EYEM</a></li>
                             <li><a href="misgrupos.xhtml">mis grupos</a></li>
                         </ul>
-                    </div>			
+
+                    </div><!--/.nav-collapse -->			
                 </div>	
             </nav>
 
