--- a/socialEyem-web/src/main/webapp/resources/plantilla.xhtml
+++ b/socialEyem-web/src/main/webapp/resources/plantilla.xhtml
@@ -30,20 +30,18 @@
                      #{usuarioBean.veteAIndex()}
         </ui:fragment>
 
-
-
         <header id="header">
             <!--Perfil del usuario logeado-->
             <div id="head" class="parallax" parallax-speed="1">
                 <h1 id="logo" class="text-center">
                     <!--Imagen del usuario logeado-->
                     <h:graphicImage class="img-circle" value="#{usuarioBean.imagen}" alt="Mi imagen de perfil"/>
-                    <span class="title">#{usuarioBean.nombre}</span>
+                    <span>#{usuarioBean.nombre}</span>
                     <span class="taglineEMAIL">#{usuarioBean.email}</span>
                 </h1>
             </div>
 
-            
+
             <nav class="navbar navbar-default navbar-sticky">
                 <div class="container-fluid">
 
@@ -63,6 +61,16 @@
                             <li><a href="mieyem.xhtml">mi EYEM</a></li>
                             <li><a href="misgrupos.xhtml">mis grupos</a></li>
                         </ul>
+                        
+                        <!--Buscador-->
+                        <div>
+                            <h:form>
+                                <h:inputText class="buscador" value="#{postBean.userEmailPerfil}"  />
+                                <h:commandLink class="buscador2"  action="#{postBean.buscarUsuario()}">
+                                    <h:graphicImage height="20" width="20" library="images" name="icona_cerca.png" alt="buscar" />
+                                </h:commandLink>
+                            </h:form>
+                        </div>
 
                     </div><!--/.nav-collapse -->			
                 </div>	
