cambios en estilo

--- a/socialEyem-web/src/main/webapp/timeline.xhtml
+++ b/socialEyem-web/src/main/webapp/timeline.xhtml
@@ -18,7 +18,10 @@
         <main id="main">
             <div class="container">
                 <div class="row topspace">
+                    <center><h2 id="titulopagina">TIMELINE</h2></center><br/>
                     <div class="col-sm-8 col-sm-offset-2">
+                        
+                        
                         <h:panelGroup id="cont" layout="block">
                             <h:form id="form_crear">
                                 <div class="form-group">
