--- a/socialEyem-web/src/main/webapp/resources/plantilla.xhtml
+++ b/socialEyem-web/src/main/webapp/resources/plantilla.xhtml
@@ -65,10 +65,11 @@
                         <!--Buscador-->
                         <div>
                             <h:form>
-                                <h:inputText class="buscador" value="#{postBean.userEmailPerfil}"  />
+                                <h:inputText id="caja" class="buscador" value="#{postBean.userEmailPerfil}"  />
                                 <h:commandLink class="buscador2"  action="#{postBean.buscarUsuario()}">
                                     <h:graphicImage height="20" width="20" library="images" name="icona_cerca.png" alt="buscar" />
                                 </h:commandLink>
+                                    
                             </h:form>
                         </div>
 
