--- a/socialEyem-web/src/main/webapp/verPerfil.xhtml
+++ b/socialEyem-web/src/main/webapp/verPerfil.xhtml
@@ -9,6 +9,12 @@
 
     <ui:define name="contenido">
 
+        <head>
+            <script>
+                document.title = "Ver perfil de #{postBean.dameNombreDe(postBean.userEmailPerfil)}";
+            </script>
+        </head>
+        
         <main id="main">
             <div class="container">
                 <div class="row topspace">
