A ver que pasa...................

--- a/socialEyem-web/src/main/webapp/mostrarGrupo.xhtml
+++ b/socialEyem-web/src/main/webapp/mostrarGrupo.xhtml
@@ -10,6 +10,7 @@
         <f:metadata>
             <f:viewParam name="id" />
             <f:viewParam name="creandoPost" />
+            <f:viewParam name="editandoGrupo" />
         </f:metadata>
     </h:head>
 
@@ -22,6 +23,15 @@
 
                         <h1>GRUPO #{grupoBean.grupoSeleccionado.nombreGrupo}</h1>
                         <h:panelGroup id="cont" layout="block">
+                            <h:button  outcome="editarGrupo.xhtml" class="btn-action" value="Editar">
+                                <f:param name="editandoGrupo" value="#{grupoBean.grupoSeleccionado.idGrupo}" />
+                            </h:button>
+                            <h:outputLabel value="Usuarios del grupo"/>
+                            <br/>
+                            <br/>
+                            <ui:repeat var="usuario" value="#{grupoBean.listaUsuarios}">
+                                <h:graphicImage class="img-circle-small" value="#{usuario.imagen}" alt="imagen del usuario #{p.nombre}"/>
+                            </ui:repeat>
                             <h:form id="form_crear">
                                 <div class="form-group">
                                     Contenido
@@ -77,8 +87,8 @@
                                     <hr/>
                                 </article>
                             </ui:repeat>
-                            
-                            
+
+
                         </h:panelGroup>
                     </div> 
                 </div>
